# StartPage

./: .cproject  .gitignore  .project  Makefile  README.md  README.md~  README.txt  ToDO.md  build.sh  configuration_test  func.h  func.h~  init.c  init.c~  init.h  layout.c  layout.h  log  main.c  main.c~  settings_from_store  startpage  vars.h  vars.h~
.circleci/: config.yml
Ressources/: logger.conf  settings.ini
Ressources/scripts/: printIp.sh  printNetmask.sh  rdp.sh  startConfigPage.sh  start_ConfigPage.sh
StartPage/: .gitignore  CMakeLists.txt  HelloWorldGui.pro  HelloWorldGui.pro.user.130897a  Qt_install_README.txt  README.md  StartPage.pro  citrix.cpp  citrix.h  clean_cmake.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrc_resources.cpp  qrc_ressources.cpp  rdp.cpp  rdp.h  resources.qrc  ressources.qrc  startpage.cpp  startpage.h  startpage.h.in  startpage.ui  startpage.ui.orig  storebrowse.cpp  storebrowse.h  ui_startpage.h
StartPage/doc/: Doxyfile  run.sh
StartPage/inc/: Citrix.h  citrix.h  init.h
StartPage/scripts/: printGateway.sh  printIp.sh  printNetmask.sh
StartPage/setting/: setting.ini
StartPage/src/: Citrix.cpp  citrix.cpp  init.cpp
StartPage/test/: unitTest.cpp  unitTest.h
debian/: control  install  rules  startpage.install
files/DEBIAN/: control
files/opt/IT4S/: StartPage.sh
files/opt/IT4smart/: StartPage.sh
